--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="insight-app-sec-validation" content="2958a7d2-4a34-4b55-b133-cfefa7bc92d6">
     <meta
       name="description"
       content="Web site created using create-react-app"
